--- a/Project/res/database.props
+++ b/Project/res/database.props
@@ -1,4 +1,4 @@
-mode=local
+mode=live
 db.local.url=jdbc:mysql://localhost:3306/cis18b
 db.local.user=root
 db.local.password=78dIHEN/0m8R/bXsb+iZsQ==
